fix: changed text alignment for banner title

--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -31,7 +31,7 @@
 
   &__title {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     padding: 20px;
     height: 40%;
 
